--- a/css/layout.css
+++ b/css/layout.css
@@ -1,115 +1,97 @@
-html {
-    width: 480px;
-    margin: auto;
-    height: 767px;
+@media (max-width: 768px) {
+  body {
+    max-width: 768px;
   }
-  
-  section, article {
-    text-align: center;
+
+  main {
+    width: 100%;
   }
-  
-  div {
-    position: relative;
-    top: 43%;
-  }
-  
-  .ef, .gh {
-    height: 250px;
-  }
-  
+
   #a {
+    width: 480px;
     height: 75px;
+    line-height: 75px;
   }
   
   #b {
+    width: 480px;
     height: 150px;
+    line-height: 150px;
   }
-  
+
   #c, #d {
-    height: 125px;
+    width: 480px;
+    height: 75px;
+    line-height: 75px;
   }
-  
-  .ef, .gh {
-    display: inline-block;
-  }
-  
-  #e, #g {
+
+  #e, #f, #g, #h {
+    width: 240px;
+    height: 250px;
+    line-height: 250px;
     float: left;
-    width: 49.115%;
   }
   
-  #f, #h {
-    width: 49.115%;
+  #g {
+    clear: both;
+    float: left;
+    /* margin-left: auto; */
   }
-  
-  #i {
+
+
+
+  #h {
+    float: left;
+
+  }
+ 
+  #j {
+    width: 480px;
     height: 80px;
+    line-height: 80px;
+    clear: both;
+  }
+}
+
+@media (min-width: 769px) {
+  body {
+    max-width: 1000px;
+    /* margin: auto; */
   }
   
-  @media all and (min-width: 768px) {
-    html {
-      width: 960px;
-    }
-  
-    #a {
-      height: 100px;
-    }
-  
-    #b {
-      float: left;
-      width: 196px;
-      height: 614px;
-    }
-  
-    #cdefghi {
-      float: right;
-      width: 745px;
-    }
-  
-    #c {
-      float: left;
-      width: 375px;
-      height: 200px;
-    }
-  
-    #d {
-      width: 375px;
-      height: 200px;
-      float: right;
-    }
-  
-    #bigsection, #sectionefgh {
-      width: 945px;
-      content: "";
-      display: table;
-      clear: both;
-    }
-  
-    #sectionefgh {
-      width: 745px;
-    }
-  
-    #desktopcdefghi {
-      width: 740px;
-      height: 600px;
-    }
-  
-    #sectionef {
-      float: left;
-      width: 50%;
-    }
-  
-    #sectiongh {
-      float: right;
-      width: 50%;
-    }
-  
-    #e, #f, #g, #h {
-      width: 50%;
-      height: 250px;
-    }
-  
-    #i {
-      height: 150px;
-    }
+  main {
+    max-width: 962px;
   }
+
+  #a {
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+  }
+  #b {
+    width: 21%;
+    height: 600px;
+    line-height: 600px;
+    float: left;
+  }
+  #c, #d {
+    width: 39.4%;
+    height: 200px;
+    line-height: 200px;
+    float: left;
+  }
+
+  #e, #f, #g, #h {
+    width: 19.71%;
+    height: 250px;
+    line-height: 250px;
+    float: left;
+  }
+
+  #j {
+    width: 78.9%;
+    height: 150px;
+    line-height: 150px;
+    float: left;
+  }
+}
